improved optional logic and snippet merging
